--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,9 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
+	{% if site.org-logo %}
+          <img src="{{site.org-logo | relative_url}}" alt="Logo" />
+        {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
